; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/nfs/extr_nfs_commonsubs.c_nfsrv_refstrbigenough.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/nfs/extr_nfs_commonsubs.c_nfsrv_refstrbigenough.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_NFSSTRING = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32**, i32**, i32*)* @nfsrv_refstrbigenough to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfsrv_refstrbigenough(i32 %0, i32** %1, i32** %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32** %1, i32*** %6, align 8
  store i32** %2, i32*** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* %12, align 4
  %14 = icmp sle i32 %11, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  br label %51

16:                                               ; preds = %4
  %17 = load i32, i32* %5, align 4
  %18 = add nsw i32 %17, 1024
  %19 = load i32, i32* @M_NFSSTRING, align 4
  %20 = load i32, i32* @M_WAITOK, align 4
  %21 = call i32* @malloc(i32 %18, i32 %19, i32 %20)
  store i32* %21, i32** %9, align 8
  %22 = load i32**, i32*** %6, align 8
  %23 = load i32*, i32** %22, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @NFSBCOPY(i32* %23, i32* %24, i32 %26)
  %28 = load i32**, i32*** %6, align 8
  %29 = load i32*, i32** %28, align 8
  %30 = load i32, i32* @M_NFSSTRING, align 4
  %31 = call i32 @free(i32* %29, i32 %30)
  %32 = load i32**, i32*** %7, align 8
  %33 = load i32*, i32** %32, align 8
  %34 = load i32**, i32*** %6, align 8
  %35 = load i32*, i32** %34, align 8
  %36 = ptrtoint i32* %33 to i64
  %37 = ptrtoint i32* %35 to i64
  %38 = sub i64 %36, %37
  %39 = sdiv exact i64 %38, 4
  %40 = trunc i64 %39 to i32
  store i32 %40, i32* %10, align 4
  %41 = load i32*, i32** %9, align 8
  %42 = load i32**, i32*** %6, align 8
  store i32* %41, i32** %42, align 8
  %43 = load i32*, i32** %9, align 8
  %44 = load i32, i32* %10, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  %47 = load i32**, i32*** %7, align 8
  store i32* %46, i32** %47, align 8
  %48 = load i32, i32* %5, align 4
  %49 = add nsw i32 %48, 1024
  %50 = load i32*, i32** %8, align 8
  store i32 %49, i32* %50, align 4
  br label %51

51:                                               ; preds = %16, %15
  ret void
}

declare dso_local i32* @malloc(i32, i32, i32) #1

declare dso_local i32 @NFSBCOPY(i32*, i32*, i32) #1

declare dso_local i32 @free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
